--- a/SigaaBiblio/res/layout/activity_login.xml
+++ b/SigaaBiblio/res/layout/activity_login.xml
@@ -16,7 +16,7 @@
 	        android:id="@+id/imageView1"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:src="@drawable/brasaoUFPB" />
+	        android:src="@drawable/brasao_ufpb" />
 
 	    <TextView
 	        android:id="@+id/textView1"
