Update no layout

--- a/SigaaBiblio/res/layout/activity_login.xml
+++ b/SigaaBiblio/res/layout/activity_login.xml
@@ -2,8 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical" >
 	
 	<LinearLayout
 	    android:layout_width="match_parent"
@@ -66,21 +65,18 @@
 		    android:id="@+id/textView4"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
-		    android:text="Senha"
+		    android:text="Senha:"
 		    android:textSize="20dp"
-		    android:layout_margin="10dp"
+		    android:layout_margin="7dp"
 		     />
 
 		<EditText
 		    android:id="@+id/editText2"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
+		    android:layout_marginLeft="4dp"
 		    android:ems="10"
-		    android:inputType="numberPassword" >
-
-		    <requestFocus android:layout_width="wrap_content" />
-
-		</EditText>
+		    android:inputType="numberPassword" />
 	    
 	</LinearLayout>
 
