Correcoes no layout do login

--- a/SigaaBiblio/res/layout/activity_login.xml
+++ b/SigaaBiblio/res/layout/activity_login.xml
@@ -27,17 +27,19 @@
 	</LinearLayout>
   	
 	<TextView
-		    android:id="@+id/textView2"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:text="Informe seu cadastro no SIGAA UFPB"
-		    android:layout_margin="10dp"
-		    android:textSize="20dp"/>
+	    android:id="@+id/textView2"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_gravity="center"
+	    android:layout_margin="10dp"
+	    android:text="Informe seu cadastro no SIGAA UFPB"
+		android:gravity="center"
+	    android:textSize="20dp" />
 	
 	<LinearLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
-	    android:layout_gravity="center" >
+	    android:gravity="center" >
 
 		<TextView
 		    android:id="@+id/textView3"
@@ -59,7 +61,7 @@
 	<LinearLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
-	    android:layout_gravity="center" >
+	    android:gravity="center" >
 
 		<TextView
 		    android:id="@+id/textView4"
