--- a/SigaaBiblio/res/layout/activity_login.xml
+++ b/SigaaBiblio/res/layout/activity_login.xml
@@ -78,7 +78,7 @@
 		    android:layout_height="wrap_content"
 		    android:layout_marginLeft="4dp"
 		    android:ems="10"
-		    android:inputType="numberPassword" />
+		    android:inputType="textPassword" />
 	    
 	</LinearLayout>
 
