--- a/SigaaBiblio/res/layout/activity_login.xml
+++ b/SigaaBiblio/res/layout/activity_login.xml
@@ -3,11 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-	
+	 <!-- android:background="#2932aa"-->
 	<LinearLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
-	    android:background="#2932aa"
+	    android:background="@drawable/borda"
 	    android:gravity="center"
 	    android:orientation="horizontal" >
 
