--- a/SigaaBiblio/res/layout/activity_busca_livro.xml
+++ b/SigaaBiblio/res/layout/activity_busca_livro.xml
@@ -1,11 +1,134 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".BuscaLivroActivity" >
+    android:orientation="vertical" >
+	 <!-- android:background="#2932aa"-->
+	<LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="70dp"
+	    android:background="@drawable/borda"
+	    android:gravity="center"
+	    android:orientation="horizontal" >
 
-</RelativeLayout>
+	    <TextView
+	        android:id="@+id/textViewTitleLivro"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/title_busca_livro"
+	        android:textColor="@android:color/white"
+	        android:textSize="25dp" />
+	</LinearLayout>
+  	
+	<TextView
+	    android:id="@+id/textViewTextBuscaLivro"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_gravity="center"
+	    android:layout_margin="10dp"
+	    android:text="@string/text_busca_livro"
+		android:gravity="center"
+	    android:textSize="20dp" />
+	
+	<LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:gravity="center" >
+
+		<TextView
+		    android:id="@+id/textViewTituloLivro"	    
+  		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:text="Título: " 
+		    android:textSize="20dp"
+		    android:layout_margin="10dp"/>
+
+		<EditText
+		    android:id="@+id/editTextTituloLivro"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_marginLeft="15dp"
+		    android:ems="10">
+		</EditText>
+	    
+	</LinearLayout>
+	
+	<LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:gravity="center" >
+
+		<TextView
+		    android:id="@+id/textViewAutorLivro"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_margin="7dp"	    
+		    android:text="Autor:"
+		    android:textSize="20dp" />
+
+		<EditText
+		    android:id="@+id/editTextAutorLivro"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_marginLeft="26dp"
+		    android:ems="10"
+		    />
+	    
+	</LinearLayout>
+
+	<LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:gravity="center" >
+
+		<TextView
+		    android:id="@+id/textViewAssuntoLivro"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:text="Assunto:"
+		    android:textSize="20dp"
+		    android:layout_margin="7dp"
+		     />
+
+		<EditText
+		    android:id="@+id/editTextAssuntoLivro"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_marginLeft="4dp"
+		    android:ems="10"
+		    />
+	    
+	</LinearLayout>
+	
+	<LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:gravity="center" >
+
+		<TextView
+		    android:id="@+id/textViewBibliotecaLivro"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"	    
+		    android:text="Biblioteca:"
+		    android:textSize="20dp"
+		    android:layout_marginLeft="7dp"
+		     />
+
+		<Spinner
+		    android:id="@+id/spinnerBibliotecaLivro"
+		    android:layout_width="wrap_content"
+		    android:layout_height="50dp"
+		    />
+	    
+	</LinearLayout>
+	
+	
+	<Button
+	    android:id="@+id/buttonBuscarLivro"
+	    android:layout_width="230dp"
+	    android:layout_height="wrap_content"
+	    android:layout_gravity="center"
+	    android:layout_marginTop="50dp"
+	    android:text="Pesquisar" />
+  
+</LinearLayout>
