--- a/SigaaBiblio/res/layout/activity_login.xml
+++ b/SigaaBiblio/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
 	<LinearLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
-	    android:background="@drawable/borda"
+	    android:background="@drawable/background1"
 	    android:gravity="center"
 	    android:orientation="horizontal" >
 
