--- a/SigaaBiblio/res/layout/activity_renovacao.xml
+++ b/SigaaBiblio/res/layout/activity_renovacao.xml
@@ -3,23 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+	<LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="70dp"
+	    android:background="@drawable/borda"
+	    android:gravity="center"
+	    android:orientation="horizontal" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/borda"
-        android:gravity="center"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/header_renovacao"
-            android:textColor="@android:color/white"
-            android:layout_weight="2" 
-            android:textSize="25dp" />
-    </LinearLayout>
+	    <TextView
+	        android:id="@+id/textViewTitleLivro"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/header_renovacao"
+	        android:textColor="@android:color/white"
+	        android:textSize="25dp" />
+	</LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,10 +25,23 @@
 
         <ListView
             android:id="@+id/listView1"
+            android:layout_width="wrap_content"
+            android:layout_height="337dp" >
+
+        </ListView>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="182dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" >
+
+        <Button
+            android:id="@+id/button1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" >
-        </ListView>
+            android:text="@string/header_renovacao" />
 
     </LinearLayout>
 
