Activity Situacao Usuario

--- a/SigaaBiblio/res/layout/activity_login.xml
+++ b/SigaaBiblio/res/layout/activity_login.xml
@@ -18,7 +18,7 @@
 	        android:src="@drawable/brasao_ufpb" />
 
 	    <TextView
-	        android:id="@+id/textView1"
+	        android:id="@+id/textViewSituacaoUsuario1"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:text="@string/nomeSistema"
@@ -27,7 +27,7 @@
 	</LinearLayout>
   	
 	<TextView
-	    android:id="@+id/textView2"
+	    android:id="@+id/textViewDataEmprestimo"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_gravity="center"
@@ -42,7 +42,7 @@
 	    android:gravity="center" >
 
 		<TextView
-		    android:id="@+id/textView3"
+		    android:id="@+id/textViewDataRenovacao"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:text="Login: " 
@@ -64,7 +64,7 @@
 	    android:gravity="center" >
 
 		<TextView
-		    android:id="@+id/textView4"
+		    android:id="@+id/textViewDataDevolucao"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:text="Senha:"
