--- a/SigaaBiblio/res/layout-land/activity_login.xml
+++ b/SigaaBiblio/res/layout-land/activity_login.xml
@@ -18,7 +18,7 @@
 	        android:src="@drawable/brasao_ufpb" />
 
 	    <TextView
-	        android:id="@+id/textView1"
+	        android:id="@+id/textViewSituacaoUsuario1"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:text="@string/nomeSistema"
@@ -27,7 +27,7 @@
 	</LinearLayout>
   	
 	<TextView
-	    android:id="@+id/textView2"
+	    android:id="@+id/textViewDataEmprestimo"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_gravity="center"
@@ -43,7 +43,7 @@
 	    
 	   			
 		<TextView
-		    android:id="@+id/textView3"
+		    android:id="@+id/textViewDataRenovacao"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:text="Login: " 
@@ -54,19 +54,19 @@
 		    android:id="@+id/editText1"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
-		    android:layout_alignLeft="@+id/textView3"
+		    android:layout_alignLeft="@+id/textViewDataRenovacao"
 		    android:layout_marginLeft="80dp"
 		    android:ems="10">
 		</EditText>
     
 		
 		<TextView
-		    android:id="@+id/textView4"
+		    android:id="@+id/textViewDataDevolucao"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:text="Senha:"
 		    android:textSize="20dp"
-		    android:layout_alignTop="@+id/textView3"
+		    android:layout_alignTop="@+id/textViewDataRenovacao"
 		    android:layout_marginTop="60dp"
 		    android:layout_marginLeft="10dp"
 		     />
@@ -77,7 +77,7 @@
 		    android:layout_height="wrap_content"
 		    android:layout_alignLeft="@+id/editText1"
 		    android:layout_alignRight="@+id/editText1"
-		    android:layout_alignTop="@+id/textView4"
+		    android:layout_alignTop="@+id/textViewDataDevolucao"
 		    android:ems="10"
 		    android:inputType="textPassword" />
 	    
