--- a/SigaaBiblio/res/layout-land/activity_menu.xml
+++ b/SigaaBiblio/res/layout-land/activity_menu.xml
@@ -18,7 +18,7 @@
 	        android:orientation="horizontal" >
 	
 	        <TextView
-	            android:id="@+id/textView1"
+	            android:id="@+id/textViewSituacaoUsuario1"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 	            android:layout_marginLeft="20dp"
@@ -50,13 +50,13 @@
 	            android:orientation="vertical">
 	
 		        <TextView
-		            android:id="@+id/textView2"
+		            android:id="@+id/textViewDataEmprestimo"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:text="Empréstimos Abertos N"
 		            android:textSize="17dp" />
 		        <TextView
-		            android:id="@+id/textView3"
+		            android:id="@+id/textViewDataRenovacao"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
 		            android:text="Empréstimos: SIM"
