--- a/SigaaBiblio/res/layout/activity_menu.xml
+++ b/SigaaBiblio/res/layout/activity_menu.xml
@@ -14,7 +14,7 @@
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/textViewSituacaoUsuario1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -46,13 +46,13 @@
             android:orientation="vertical">
 
 	        <TextView
-	            android:id="@+id/textView2"
+	            android:id="@+id/textViewDataEmprestimo"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 	            android:text="Total de Empréstimos em Aberto: N"
 	            android:textSize="17dp" />
 	        <TextView
-	            android:id="@+id/textView3"
+	            android:id="@+id/textViewDataRenovacao"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 	            android:text="Posso fazer Empréstimos: SIM"
