--- a/SigaaBiblio/res/layout/activity_busca_artigo.xml
+++ b/SigaaBiblio/res/layout/activity_busca_artigo.xml
@@ -12,21 +12,21 @@
 	    android:orientation="horizontal" >
 
 	    <TextView
-	        android:id="@+id/textViewTitleLivro"
+	        android:id="@+id/textViewTitleArtigo"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:text="@string/title_busca_livro"
+	        android:text="@string/title_busca_artigo"
 	        android:textColor="@android:color/white"
 	        android:textSize="25dp" />
 	</LinearLayout>
   	
 	<TextView
-	    android:id="@+id/textViewTextBuscaLivro"
+	    android:id="@+id/textViewTextBuscaArtigo"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_gravity="center"
 	    android:layout_margin="10dp"
-	    android:text="@string/text_busca_livro"
+	    android:text="@string/text_busca_artigo"
 		android:gravity="center"
 	    android:textSize="20dp" />
 	
@@ -36,7 +36,7 @@
 	    android:gravity="center" >
 
 		<TextView
-		    android:id="@+id/textViewTituloLivro"	    
+		    android:id="@+id/textViewTituloArtigo"	    
   		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:text="Título: " 
@@ -44,7 +44,7 @@
 		    android:layout_margin="10dp"/>
 
 		<EditText
-		    android:id="@+id/editTextTituloLivro"
+		    android:id="@+id/editTextTituloArtigo"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:layout_marginLeft="15dp"
@@ -59,7 +59,7 @@
 	    android:gravity="center" >
 
 		<TextView
-		    android:id="@+id/textViewAutorLivro"
+		    android:id="@+id/textViewAutorArtigo"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:layout_margin="7dp"	    
@@ -67,7 +67,7 @@
 		    android:textSize="20dp" />
 
 		<EditText
-		    android:id="@+id/editTextAutorLivro"
+		    android:id="@+id/editTextAutorArtigo"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:layout_marginLeft="26dp"
@@ -82,16 +82,16 @@
 	    android:gravity="center" >
 
 		<TextView
-		    android:id="@+id/textViewAssuntoLivro"
+		    android:id="@+id/textViewPalavraChaveArtigo"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
-		    android:text="Assunto:"
+		    android:text="Palavra-\nChave:"
 		    android:textSize="20dp"
-		    android:layout_margin="7dp"
+		    android:layout_margin="10dp"
 		     />
 
 		<EditText
-		    android:id="@+id/editTextAssuntoLivro"
+		    android:id="@+id/editTextPalavraChaveArtigo"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:layout_marginLeft="4dp"
