--- a/SigaaBiblio/res/layout/activity_renovacao.xml
+++ b/SigaaBiblio/res/layout/activity_renovacao.xml
@@ -11,7 +11,7 @@
 	    android:orientation="horizontal" >
 
 	    <TextView
-	        android:id="@+id/textViewTitleLivro"
+	        android:id="@+id/textViewTitleRenovacao"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:text="@string/header_renovacao"
