--- a/SigaaBiblio/res/layout/activity_exemplares.xml
+++ b/SigaaBiblio/res/layout/activity_exemplares.xml
@@ -22,7 +22,19 @@
             android:textSize="25dp" />
     </LinearLayout>
 
-
+	<ScrollView
+	    android:id="@+id/scrollView1"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent" 
+	    >
+	<HorizontalScrollView 
+	    android:layout_width="wrap_content"
+	    android:layout_height="match_parent"
+	    >
+	    <LinearLayout
+	        android:layout_width="match_parent"
+	        android:layout_height="match_parent"
+	        android:orientation="vertical" >
 
         <TableLayout
             android:layout_width="wrap_content"
@@ -116,5 +128,9 @@
             android:layout_height="wrap_content"
             android:text="Button" />
         </LinearLayout>
+        
+        </LinearLayout>
+        </HorizontalScrollView>
+        </ScrollView>
 
 </LinearLayout>
