--- a/SigaaBiblio/res/layout/activity_login.xml
+++ b/SigaaBiblio/res/layout/activity_login.xml
@@ -25,7 +25,15 @@
 	        android:textColor="@android:color/white"
 	        android:textSize="25dp" />
 	</LinearLayout>
-  	
+  	<ScrollView
+	    android:id="@+id/scrollView1"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent" >
+
+	    <LinearLayout
+	        android:layout_width="match_parent"
+	        android:layout_height="match_parent"
+	        android:orientation="vertical">
 	<TextView
 	    android:id="@+id/textViewDataEmprestimo"
 	    android:layout_width="wrap_content"
@@ -53,6 +61,7 @@
 		    android:id="@+id/editText1"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
+		    android:singleLine="true"
 		    android:ems="10">
 		</EditText>
 	    
@@ -78,7 +87,11 @@
 		    android:layout_height="wrap_content"
 		    android:layout_marginLeft="4dp"
 		    android:ems="10"
-		    android:inputType="textPassword" />
+		    android:singleLine="true"
+		    android:inputType="textPassword" >
+
+		    <requestFocus />
+		</EditText>
 	    
 	</LinearLayout>
 
@@ -89,5 +102,8 @@
 	    android:layout_gravity="center"
 	    android:layout_marginTop="50dp"
 	    android:text="Entrar" />
-  
+  </LinearLayout>
+	</ScrollView>
+  	    
+  	    
 </LinearLayout>
