--- a/SigaaBiblio/res/layout/activity_busca_artigo.xml
+++ b/SigaaBiblio/res/layout/activity_busca_artigo.xml
@@ -20,6 +20,17 @@
 	        android:textSize="25dp" />
 	</LinearLayout>
   	
+	
+	<ScrollView
+	    android:id="@+id/scrollView1"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent" >
+
+	    <LinearLayout
+	        android:layout_width="match_parent"
+	        android:layout_height="match_parent"
+	        android:orientation="vertical" >
+	
 	<TextView
 	    android:id="@+id/textViewTextBuscaArtigo"
 	    android:layout_width="wrap_content"
@@ -128,5 +139,8 @@
 	    android:layout_gravity="center"
 	    android:layout_marginTop="30dp"
 	    android:text="Pesquisar" />
+	
+	 </LinearLayout>
+	</ScrollView>
   
 </LinearLayout>
