Land de exemplares feito com scrolls aninhados

--- a/SigaaBiblio/res/layout-land/activity_exemplares.xml
+++ b/SigaaBiblio/res/layout-land/activity_exemplares.xml
@@ -21,16 +21,32 @@
             android:textColor="@android:color/white"
             android:textSize="25dp" />
     </LinearLayout>
-
+    
+	<ScrollView
+	    android:id="@+id/scrollView2"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content" 
+	    >
+	
+	    <LinearLayout
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:orientation="vertical" >
+    
     
     <ScrollView
-        android:layout_width="match_parent"
-	    android:layout_height="match_parent" >
-
- <LinearLayout
-     android:layout_width="match_parent"
-     android:layout_height="wrap_content"
-     android:orientation="vertical" >
+	    android:id="@+id/scrollView1"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content" 
+	    >
+	<HorizontalScrollView 
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    >
+	    <LinearLayout
+	        android:layout_width="wrap_content"
+	        android:layout_height="match_parent"
+	        android:orientation="vertical" >
 
         <TableLayout
             android:layout_width="wrap_content"
@@ -132,7 +148,12 @@
                 
             </TableRow>
         </TableLayout>
+        </LinearLayout>
+        </HorizontalScrollView>
+        </ScrollView>
+        
 
+    
         <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
@@ -169,8 +190,7 @@
             android:layout_height="wrap_content"
             android:text="Button" />
         </LinearLayout>
-        
         </LinearLayout>
-        
         </ScrollView>
+        
 </LinearLayout>
