--- a/SigaaBiblio/res/layout-land/activity_login.xml
+++ b/SigaaBiblio/res/layout-land/activity_login.xml
@@ -51,7 +51,7 @@
 		    android:layout_margin="10dp"/>
 
 		<EditText
-		    android:id="@+id/editText1"
+		    android:id="@+id/dataFinalText"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:layout_alignLeft="@+id/textViewDataRenovacao"
@@ -75,14 +75,14 @@
 		    android:id="@+id/editText2"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
-		    android:layout_alignLeft="@+id/editText1"
-		    android:layout_alignRight="@+id/editText1"
+		    android:layout_alignLeft="@+id/dataFinalText"
+		    android:layout_alignRight="@+id/dataFinalText"
 		    android:layout_alignTop="@+id/textViewDataDevolucao"
 		    android:ems="10"
 		    android:inputType="textPassword" />
 	    
 		<Button
-		    android:id="@+id/button1"
+		    android:id="@+id/consultarHistorico"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:layout_alignRight="@+id/editText2"
