--- a/SigaaBiblio/res/layout/activity_login.xml
+++ b/SigaaBiblio/res/layout/activity_login.xml
@@ -58,7 +58,7 @@
 		    android:layout_margin="10dp"/>
 
 		<EditText
-		    android:id="@+id/editText1"
+		    android:id="@+id/dataFinalText"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:singleLine="true"
@@ -96,7 +96,7 @@
 	</LinearLayout>
 
 	<Button
-	    android:id="@+id/button1"
+	    android:id="@+id/consultarHistorico"
 	    android:layout_width="230dp"
 	    android:layout_height="wrap_content"
 	    android:layout_gravity="center"
