--- a/SigaaBiblio/res/layout-land/activity_menu.xml
+++ b/SigaaBiblio/res/layout-land/activity_menu.xml
@@ -71,7 +71,7 @@
             android:layout_height="match_parent" >
 
             <Button
-                android:id="@+id/button1"
+                android:id="@+id/consultarHistorico"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:text="Consultar Acervo" />
