--- a/SigaaBiblio/res/layout-land/activity_exemplares.xml
+++ b/SigaaBiblio/res/layout-land/activity_exemplares.xml
@@ -178,17 +178,17 @@
             >
         <Button
             android:id="@+id/button1"
-            android:layout_width="103dp"
+            android:layout_width="wrap_content"
             
             android:layout_height="wrap_content"
-            android:text="Button" />
+            android:text="Retornar a Pesquisa" />
         
         <Button
             android:id="@+id/button1"
-            android:layout_width="103dp"
+            android:layout_width="wrap_content"
             
             android:layout_height="wrap_content"
-            android:text="Button" />
+            android:text="Retornar ao Menu" />
         </LinearLayout>
         </LinearLayout>
         </ScrollView>
